syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "Duration.proto";
import "Timestamp.proto";
import "BasicTypes.proto";

/* Set the freezing period in which the platform will stop creating events and accepting transactions. This is used before safely shut down the platform for maintenance. */
message FreezeTransactionBody {
    int32 startHour = 1; // The start hour (in UTC time), a value between 0 and 23
    int32 startMin = 2; // The start minute (in UTC time), a value between 0 and 59
    int32 endHour = 3; // The end hour (in UTC time), a value between 0 and 23
    int32 endMin = 4; // The end minute (in UTC time), a value between 0 and 59
    FileID updateFile = 5; // The ID of the file needs to be updated during a freeze transaction
}
